@@ -1,3 +1,8 @@
+2009-04-13  Eric Belanger  <eric@archlinux.org>
+
+	* fontforge 20090408-1
+	* Upstream update
+
 2009-02-27  Eric Belanger  <eric@archlinux.org>
 
 	* fontforge 20090224-1
